force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>This table stores information about each assessment, including the ID of the user taking it, the ID of the quiz being assessed, start and end times, status (in progress or complete), and an optional score.</description>
    <label>Assessment</label>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>