force-app/main/default/objects/Assessment__c/fields/Quize__c.field-meta.xml
<CustomField>
    <fullName>Quize__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quize</label>
    <referenceTo>Quiz__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>