force-app/main/default/objects/Assessment__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>StartTime</label>
    <type>DateTime</type>
</CustomField>