force-app/main/default/objects/Assessment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in progress</fullName>
                <default>true</default>
                <label>in progress</label>
            </value>
            <value>
                <fullName>complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>